--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@walletconnect/web3-provider": "^1.7.1",
     "core-js": "^3.15.1",
     "ethers": "^5.5.3",
+    "graphql-tag": "^2.12.6",
     "moralis": "^1.0.7",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
